--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 -->
 <html>
 <head>
+    <script src="adSense.js"></script>
+    
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
